--- a/pak-ios/storyboards/Base.lproj/Main.storyboard
+++ b/pak-ios/storyboards/Base.lproj/Main.storyboard
@@ -1483,6 +1483,13 @@ c3ZfaW5wdXRfcmVnaXN0ZXIQA
                                                                 <rect key="frame" x="0.0" y="0.0" width="135" height="248"/>
                                                                 <autoresizingMask key="autoresizingMask"/>
                                                                 <subviews>
+                                                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="AXy-tC-Aaq">
+                                                                        <rect key="frame" x="134" y="20.5" width="1" height="227"/>
+                                                                        <color key="backgroundColor" name="pak_lightGray"/>
+                                                                        <constraints>
+                                                                            <constraint firstAttribute="width" constant="1" id="o1f-15-CPK"/>
+                                                                        </constraints>
+                                                                    </view>
                                                                     <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="1Jr-vc-woV" userLabel="iv_item_photo">
                                                                         <rect key="frame" x="8" y="36" width="119" height="110"/>
                                                                         <constraints>
@@ -1516,7 +1523,7 @@ c3ZfaW5wdXRfcmVnaXN0ZXIQA
                                                                         <state key="normal" image="dwb_pak_button_hearth_gray"/>
                                                                     </button>
                                                                     <imageView hidden="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="dwb_list_end" adjustsImageSizeForAccessibilityContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="P5S-CV-Fsd">
-                                                                        <rect key="frame" x="111" y="21" width="23" height="23"/>
+                                                                        <rect key="frame" x="112" y="21" width="23" height="23"/>
                                                                         <constraints>
                                                                             <constraint firstAttribute="height" constant="23" id="jEJ-zh-3o2"/>
                                                                             <constraint firstAttribute="width" constant="23" id="sIW-HY-MPE"/>
@@ -1534,13 +1541,6 @@ c3ZfaW5wdXRfcmVnaXN0ZXIQA
                                                                         <nil key="textColor"/>
                                                                         <nil key="highlightedColor"/>
                                                                     </label>
-                                                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="AXy-tC-Aaq">
-                                                                        <rect key="frame" x="134" y="21" width="1" height="227"/>
-                                                                        <color key="backgroundColor" name="pak_lightGray"/>
-                                                                        <constraints>
-                                                                            <constraint firstAttribute="width" constant="1" id="o1f-15-CPK"/>
-                                                                        </constraints>
-                                                                    </view>
                                                                 </subviews>
                                                             </view>
                                                             <rect key="contentStretch" x="0.0" y="0.0" width="0.0" height="0.0"/>
@@ -1555,9 +1555,9 @@ c3ZfaW5wdXRfcmVnaXN0ZXIQA
                                                                 <constraint firstItem="k3I-Sp-vvM" firstAttribute="top" secondItem="yrW-6b-8Z3" secondAttribute="bottom" id="TF4-21-yx6"/>
                                                                 <constraint firstItem="9Yb-sH-AWw" firstAttribute="top" secondItem="k3I-Sp-vvM" secondAttribute="bottom" id="XBA-xs-vdz"/>
                                                                 <constraint firstItem="1Jr-vc-woV" firstAttribute="top" secondItem="P5S-CV-Fsd" secondAttribute="bottom" constant="-8" id="XbD-hl-icM"/>
+                                                                <constraint firstAttribute="trailing" secondItem="P5S-CV-Fsd" secondAttribute="trailing" id="YJu-1j-dZw"/>
                                                                 <constraint firstItem="P5S-CV-Fsd" firstAttribute="centerY" secondItem="AZV-Zq-Nui" secondAttribute="centerY" id="ZhZ-IH-C9h"/>
                                                                 <constraint firstItem="1Jr-vc-woV" firstAttribute="leading" secondItem="MMx-5d-QmV" secondAttribute="leading" constant="8" id="bf6-ph-myA"/>
-                                                                <constraint firstItem="AXy-tC-Aaq" firstAttribute="leading" secondItem="P5S-CV-Fsd" secondAttribute="trailing" id="e2S-Tx-uyn"/>
                                                                 <constraint firstItem="9Yb-sH-AWw" firstAttribute="centerX" secondItem="MMx-5d-QmV" secondAttribute="centerX" id="eXq-vQ-vbG"/>
                                                                 <constraint firstAttribute="trailing" secondItem="AXy-tC-Aaq" secondAttribute="trailing" id="gfu-wQ-WtM"/>
                                                                 <constraint firstAttribute="trailing" secondItem="1Jr-vc-woV" secondAttribute="trailing" constant="8" id="hRm-Jy-ALX"/>
@@ -1607,11 +1607,20 @@ c3ZfaW5wdXRfcmVnaXN0ZXIQA
                                                     <color key="textColor" name="pak_white"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="dwb_list_end" translatesAutoresizingMaskIntoConstraints="NO" id="HTc-ES-w6G">
+                                                    <rect key="frame" x="352" y="23" width="23" height="23"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="23" id="P61-EL-9G4"/>
+                                                        <constraint firstAttribute="width" constant="23" id="kXP-Lw-waf"/>
+                                                    </constraints>
+                                                </imageView>
                                             </subviews>
                                             <constraints>
                                                 <constraint firstItem="7qD-DZ-Wqj" firstAttribute="leading" secondItem="KEp-5A-Czz" secondAttribute="leading" id="4uG-Ag-M23"/>
+                                                <constraint firstItem="HTc-ES-w6G" firstAttribute="top" secondItem="7qD-DZ-Wqj" secondAttribute="bottom" id="ADM-kn-47l"/>
                                                 <constraint firstAttribute="trailing" secondItem="Llp-S4-FrA" secondAttribute="trailing" id="FZa-Se-4kA"/>
                                                 <constraint firstItem="Llp-S4-FrA" firstAttribute="leading" secondItem="KEp-5A-Czz" secondAttribute="leading" id="KAB-CT-TvY"/>
+                                                <constraint firstAttribute="trailing" secondItem="HTc-ES-w6G" secondAttribute="trailing" id="LXA-rH-Iuj"/>
                                                 <constraint firstItem="kjc-na-6mg" firstAttribute="leading" secondItem="KEp-5A-Czz" secondAttribute="leading" constant="15" id="VJJ-iJ-nlJ"/>
                                                 <constraint firstItem="7qD-DZ-Wqj" firstAttribute="top" secondItem="KEp-5A-Czz" secondAttribute="top" id="mHf-mp-xTT"/>
                                                 <constraint firstItem="Llp-S4-FrA" firstAttribute="top" secondItem="7qD-DZ-Wqj" secondAttribute="bottom" constant="-23" id="mkD-G2-5BA"/>
@@ -1622,6 +1631,7 @@ c3ZfaW5wdXRfcmVnaXN0ZXIQA
                                         </tableViewCellContentView>
                                         <connections>
                                             <outlet property="cv_products" destination="Llp-S4-FrA" id="Qt5-QO-J2i"/>
+                                            <outlet property="ivCornerEnd" destination="HTc-ES-w6G" id="Kgt-Qe-4S7"/>
                                             <outlet property="l_name_brand" destination="kjc-na-6mg" id="xgt-tZ-hHK"/>
                                         </connections>
                                     </tableViewCell>
@@ -1649,7 +1659,7 @@ c3ZfaW5wdXRfcmVnaXN0ZXIQA
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="YhM-9c-kHF" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="9108.4532374100727" y="1376.9784172661871"/>
+            <point key="canvasLocation" x="9108" y="1376.7616191904049"/>
         </scene>
         <!--Search View-->
         <scene sceneID="yLe-T6-Q1P">
@@ -4066,10 +4076,10 @@ c3ZfaW5wdXRfcmVnaXN0ZXIQA
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="tPW-Al-8kx">
-                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
                                 <subviews>
                                     <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="dwb_pak_empty_box" translatesAutoresizingMaskIntoConstraints="NO" id="LbV-Zd-Bze">
-                                        <rect key="frame" x="150.5" y="261.5" width="74" height="80"/>
+                                        <rect key="frame" x="150.5" y="283.5" width="74" height="80"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="80" id="V3A-au-anY"/>
                                         </constraints>
@@ -4078,7 +4088,7 @@ c3ZfaW5wdXRfcmVnaXN0ZXIQA
                                         <rect key="frame" x="176" y="0.0" width="23" height="11"/>
                                     </imageView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="No hay ningún producto en Mi cajita" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lp2-JI-dCf" userLabel="tf_message_empty">
-                                        <rect key="frame" x="66" y="343.5" width="243" height="18"/>
+                                        <rect key="frame" x="66" y="365.5" width="243" height="18"/>
                                         <fontDescription key="fontDescription" type="system" weight="light" pointSize="15"/>
                                         <color key="textColor" red="0.29174592389999998" green="0.29174592389999998" blue="0.29174592389999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <nil key="highlightedColor"/>
@@ -4095,7 +4105,7 @@ c3ZfaW5wdXRfcmVnaXN0ZXIQA
                                 </constraints>
                             </view>
                             <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="UzA-vd-2f9" userLabel="v_head">
-                                <rect key="frame" x="0.0" y="64" width="375" height="30"/>
+                                <rect key="frame" x="0.0" y="20" width="375" height="30"/>
                                 <subviews>
                                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="dwb_pak_button_detail_white_arrow_down" translatesAutoresizingMaskIntoConstraints="NO" id="UOY-xa-Z0T">
                                         <rect key="frame" x="175" y="0.0" width="25" height="11"/>
@@ -4145,7 +4155,7 @@ c3ZfaW5wdXRfcmVnaXN0ZXIQA
                                 </constraints>
                             </view>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zN4-Yw-nDi">
-                                <rect key="frame" x="0.0" y="94" width="375" height="573"/>
+                                <rect key="frame" x="0.0" y="50" width="375" height="617"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="B1m-Yr-g4f">
                                         <rect key="frame" x="0.0" y="0.0" width="375" height="380"/>
@@ -10607,10 +10617,10 @@ Recuerda que solo tienes 10 minutos para anular tu compra.</string>
     <inferredMetricsTieBreakers>
         <segue reference="4If-JT-tFy"/>
         <segue reference="e49-xG-mKz"/>
-        <segue reference="yG2-np-1bB"/>
-        <segue reference="RzB-aK-gvt"/>
+        <segue reference="F1p-gb-qZa"/>
+        <segue reference="xVe-nE-p4w"/>
         <segue reference="zhY-cZ-3JD"/>
-        <segue reference="MHy-C4-6QB"/>
+        <segue reference="huV-AG-Pcv"/>
         <segue reference="qbC-4W-Evn"/>
         <segue reference="oBi-e6-wfk"/>
         <segue reference="1vM-Rq-4HF"/>
