--- a/pak-ios/storyboards/Base.lproj/Main.storyboard
+++ b/pak-ios/storyboards/Base.lproj/Main.storyboard
@@ -2097,11 +2097,12 @@ c3ZfaW5wdXRfcmVnaXN0ZXIQA
                         <outlet property="l_producto_cost" destination="hIg-vh-oVS" id="GE3-31-snQ"/>
                         <outlet property="tf_cant_add_item" destination="hdk-82-7YV" id="csY-IT-Qqi"/>
                         <segue destination="lW2-ZZ-xBL" kind="show" identifier="segue_small_box" id="lL0-1i-dyT"/>
+                        <segue destination="o57-ZC-0D1" kind="show" identifier="segue_search_view" id="Ull-5G-G8U"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="bFD-Dw-3cr" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="5144.8000000000002" y="1151.8740629685158"/>
+            <point key="canvasLocation" x="9945" y="36"/>
         </scene>
         <!--Alert message-->
         <scene sceneID="t8L-eq-rcn">
@@ -2980,6 +2981,7 @@ c3ZfaW5wdXRfcmVnaXN0ZXIQA
                         <segue destination="lW2-ZZ-xBL" kind="show" identifier="segue_small_box" id="OS7-IV-a8p"/>
                         <segue destination="2We-4f-xKV" kind="presentation" identifier="segue_side_menu_in" id="oBi-e6-wfk"/>
                         <segue destination="qSg-KT-D5O" kind="presentation" identifier="segue_side_menu_out" id="1vM-Rq-4HF"/>
+                        <segue destination="XyV-kB-ZDU" kind="show" identifier="segue_product_favo_detail" id="VnY-AX-WXw"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="WdC-rB-exB" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -4075,35 +4077,6 @@ c3ZfaW5wdXRfcmVnaXN0ZXIQA
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="tPW-Al-8kx">
-                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
-                                <subviews>
-                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="dwb_pak_empty_box" translatesAutoresizingMaskIntoConstraints="NO" id="LbV-Zd-Bze">
-                                        <rect key="frame" x="150.5" y="283.5" width="74" height="80"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="80" id="V3A-au-anY"/>
-                                        </constraints>
-                                    </imageView>
-                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="dwb_pak_button_detail_white_arrow_down" translatesAutoresizingMaskIntoConstraints="NO" id="U8W-6M-bZT">
-                                        <rect key="frame" x="176" y="0.0" width="23" height="11"/>
-                                    </imageView>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="No hay ningún producto en Mi cajita" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lp2-JI-dCf" userLabel="tf_message_empty">
-                                        <rect key="frame" x="66" y="365.5" width="243" height="18"/>
-                                        <fontDescription key="fontDescription" type="system" weight="light" pointSize="15"/>
-                                        <color key="textColor" red="0.29174592389999998" green="0.29174592389999998" blue="0.29174592389999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                </subviews>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <constraints>
-                                    <constraint firstItem="lp2-JI-dCf" firstAttribute="centerX" secondItem="tPW-Al-8kx" secondAttribute="centerX" id="1xH-t2-seW"/>
-                                    <constraint firstItem="lp2-JI-dCf" firstAttribute="bottom" secondItem="LbV-Zd-Bze" secondAttribute="bottom" constant="20" id="DMu-cq-gK1"/>
-                                    <constraint firstItem="LbV-Zd-Bze" firstAttribute="centerX" secondItem="tPW-Al-8kx" secondAttribute="centerX" id="LeK-6h-xKQ"/>
-                                    <constraint firstItem="LbV-Zd-Bze" firstAttribute="centerY" secondItem="tPW-Al-8kx" secondAttribute="centerY" id="ZjI-Y5-pmi"/>
-                                    <constraint firstItem="U8W-6M-bZT" firstAttribute="centerX" secondItem="tPW-Al-8kx" secondAttribute="centerX" id="xXT-PQ-Ht3"/>
-                                    <constraint firstItem="U8W-6M-bZT" firstAttribute="top" secondItem="tPW-Al-8kx" secondAttribute="top" id="yIk-De-3ff"/>
-                                </constraints>
-                            </view>
                             <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="UzA-vd-2f9" userLabel="v_head">
                                 <rect key="frame" x="0.0" y="20" width="375" height="30"/>
                                 <subviews>
@@ -4569,17 +4542,46 @@ c3ZfaW5wdXRfcmVnaXN0ZXIQA
                                     <constraint firstItem="B1m-Yr-g4f" firstAttribute="leading" secondItem="zN4-Yw-nDi" secondAttribute="leading" id="mEk-yd-MS4"/>
                                 </constraints>
                             </scrollView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="tPW-Al-8kx">
+                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                                <subviews>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="dwb_pak_empty_box" translatesAutoresizingMaskIntoConstraints="NO" id="LbV-Zd-Bze">
+                                        <rect key="frame" x="150.5" y="283.5" width="74" height="80"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="80" id="V3A-au-anY"/>
+                                        </constraints>
+                                    </imageView>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="dwb_pak_button_detail_white_arrow_down" translatesAutoresizingMaskIntoConstraints="NO" id="U8W-6M-bZT">
+                                        <rect key="frame" x="176" y="0.0" width="23" height="11"/>
+                                    </imageView>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="No hay ningún producto en Mi cajita" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lp2-JI-dCf" userLabel="tf_message_empty">
+                                        <rect key="frame" x="66" y="365.5" width="243" height="18"/>
+                                        <fontDescription key="fontDescription" type="system" weight="light" pointSize="15"/>
+                                        <color key="textColor" red="0.29174592389999998" green="0.29174592389999998" blue="0.29174592389999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstItem="lp2-JI-dCf" firstAttribute="centerX" secondItem="tPW-Al-8kx" secondAttribute="centerX" id="1xH-t2-seW"/>
+                                    <constraint firstItem="lp2-JI-dCf" firstAttribute="bottom" secondItem="LbV-Zd-Bze" secondAttribute="bottom" constant="20" id="DMu-cq-gK1"/>
+                                    <constraint firstItem="LbV-Zd-Bze" firstAttribute="centerX" secondItem="tPW-Al-8kx" secondAttribute="centerX" id="LeK-6h-xKQ"/>
+                                    <constraint firstItem="LbV-Zd-Bze" firstAttribute="centerY" secondItem="tPW-Al-8kx" secondAttribute="centerY" id="ZjI-Y5-pmi"/>
+                                    <constraint firstItem="U8W-6M-bZT" firstAttribute="centerX" secondItem="tPW-Al-8kx" secondAttribute="centerX" id="xXT-PQ-Ht3"/>
+                                    <constraint firstItem="U8W-6M-bZT" firstAttribute="top" secondItem="tPW-Al-8kx" secondAttribute="top" id="yIk-De-3ff"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
+                            <constraint firstItem="6DU-fX-GRv" firstAttribute="top" secondItem="zN4-Yw-nDi" secondAttribute="bottom" id="A3l-PO-Zne"/>
                             <constraint firstItem="tPW-Al-8kx" firstAttribute="leading" secondItem="eQF-oL-sGv" secondAttribute="leading" id="CpE-P5-J6a"/>
-                            <constraint firstItem="6DU-fX-GRv" firstAttribute="top" secondItem="zN4-Yw-nDi" secondAttribute="bottom" id="HYD-Fl-7sk"/>
-                            <constraint firstItem="6DU-fX-GRv" firstAttribute="top" secondItem="tPW-Al-8kx" secondAttribute="bottom" id="PYX-cf-5nv"/>
-                            <constraint firstItem="tPW-Al-8kx" firstAttribute="top" secondItem="knj-lt-25s" secondAttribute="bottom" id="QWy-fp-DaM"/>
-                            <constraint firstItem="UzA-vd-2f9" firstAttribute="top" secondItem="knj-lt-25s" secondAttribute="bottom" id="RaR-hA-xYI"/>
+                            <constraint firstItem="6DU-fX-GRv" firstAttribute="top" secondItem="tPW-Al-8kx" secondAttribute="bottom" id="QeZ-8L-aos"/>
+                            <constraint firstItem="tPW-Al-8kx" firstAttribute="top" secondItem="knj-lt-25s" secondAttribute="bottom" id="WB7-gC-Uqc"/>
                             <constraint firstItem="zN4-Yw-nDi" firstAttribute="top" secondItem="UzA-vd-2f9" secondAttribute="bottom" id="ZRX-BW-IiD"/>
                             <constraint firstAttribute="trailing" secondItem="tPW-Al-8kx" secondAttribute="trailing" id="ZfP-5c-UFG"/>
                             <constraint firstItem="zN4-Yw-nDi" firstAttribute="leading" secondItem="eQF-oL-sGv" secondAttribute="leading" id="hHn-Sk-d4H"/>
+                            <constraint firstItem="UzA-vd-2f9" firstAttribute="top" secondItem="knj-lt-25s" secondAttribute="bottom" id="hvO-Gb-DA4"/>
                             <constraint firstAttribute="trailing" secondItem="zN4-Yw-nDi" secondAttribute="trailing" id="sBR-tS-Gmc"/>
                             <constraint firstItem="UzA-vd-2f9" firstAttribute="leading" secondItem="eQF-oL-sGv" secondAttribute="leading" id="toH-dM-AJh"/>
                             <constraint firstItem="UzA-vd-2f9" firstAttribute="trailing" secondItem="eQF-oL-sGv" secondAttribute="trailing" id="vKS-ls-8It"/>
@@ -7696,7 +7698,7 @@ EMKhTGlzdG8hA
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="1Yf-oH-tal" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="5589.6000000000004" y="3984.1079460269866"/>
+            <point key="canvasLocation" x="5575" y="4163"/>
         </scene>
         <!--Sub Categories Controller-->
         <scene sceneID="Wb6-rq-KGT">
@@ -10617,15 +10619,15 @@ Recuerda que solo tienes 10 minutos para anular tu compra.</string>
     <inferredMetricsTieBreakers>
         <segue reference="4If-JT-tFy"/>
         <segue reference="e49-xG-mKz"/>
-        <segue reference="F1p-gb-qZa"/>
+        <segue reference="Tbg-Fj-nVg"/>
         <segue reference="xVe-nE-p4w"/>
-        <segue reference="zhY-cZ-3JD"/>
-        <segue reference="huV-AG-Pcv"/>
+        <segue reference="2h9-cx-RAU"/>
+        <segue reference="Ull-5G-G8U"/>
         <segue reference="qbC-4W-Evn"/>
-        <segue reference="oBi-e6-wfk"/>
-        <segue reference="1vM-Rq-4HF"/>
+        <segue reference="YD1-6P-6T7"/>
+        <segue reference="k7V-In-QB3"/>
         <segue reference="692-lH-5Bg"/>
-        <segue reference="SEp-H9-hjL"/>
+        <segue reference="AdC-De-agH"/>
     </inferredMetricsTieBreakers>
     <color key="tintColor" cocoaTouchSystemColor="darkTextColor"/>
 </document>
